# tinyocd

./: .gitignore  configure.ac  tiny-configure
src/: Makefile.am  openocd.c
src/flash/: Makefile.am
src/flash/nor/: Makefile.am  drivers.c
src/jtag/: Makefile.am  core.c  interfaces.c
src/jtag/drivers/: Makefile.am
src/jtag/drivers/usb_blaster/: Makefile.am
src/rtos/: Makefile.am  rtos.c
src/server/: Makefile.am  gdb_server.c  server.c
